# rust-monorepo

./: .gitignore  Cargo.toml  Makefile.toml  README.md  mise.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm-workspace.yml
guess_the_word_v2/web/: Cargo.toml  README.md  package.json
guess_the_word_v2/web/.mise/tasks/: migrate  run-local
guess_the_word_v2/web/assets/: tailwind.css
guess_the_word_v2/web/migration/: Cargo.toml
guess_the_word_v2/web/migration/src/: lib.rs  m20250820_000001_create_games_table.rs  m20250822_000002_update_games_table.rs  m20250822_000003_create_game_players_table.rs  m20250822_000004_create_rounds_table.rs
guess_the_word_v2/web/src/: main.rs
guess_the_word_v2/web/src/components/: empty_games_state.rs  game_card.rs  games_grid.rs  games_header.rs  hero.rs  loading_spinner.rs  mod.rs  name_input_modal.rs
guess_the_word_v2/web/src/server/: config.rs  game.rs  mod.rs
guess_the_word_v2/web/src/views/: games.rs  mod.rs
hot_dog/: Cargo.toml  hotdog.db
hot_dog/src/: backend.rs  main.rs
hot_dog/src/components/: favorites.rs  view.rs
mindreadr/web/: Cargo.toml  Dioxus.toml  compose.yml  input.css  package.json
mindreadr/web/.mise/tasks/: generate-entities  tailwind
mindreadr/web/assets/: tailwind.css
mindreadr/web/entities/: Cargo.toml
mindreadr/web/migration/: Cargo.toml
mindreadr/web/migration/src/: lib.rs  m20250822_000001_create_games_table.rs  m20250822_000001_create_players_table.rs  m20250823_000001_add_password_to_players.rs  m20250823_000002_remove_password_from_players.rs
mindreadr/web/src/: main.rs  state.rs
mindreadr/web/src/components/: error_message.rs  hero.rs  mod.rs  name_input_modal.rs
mindreadr/web/src/server/: mod.rs
mindreadr/web/src/views/: game_lobby.rs  mod.rs
nicknamer/: Cargo.toml  README.md  compose.yml  config.toml  railway.json
nicknamer-server/: Cargo.toml
nicknamer-server/src/: main.rs
nicknamer-server/tests/: user_controller_test.rs
nicknamer/bot/: Cargo.toml  railway.json
nicknamer/bot/src/nicknamer/: user.rs
nicknamer/config/: config.toml
nicknamer/entity/: Cargo.toml
nicknamer/migration/: Cargo.toml
nicknamer/migration/src/: m20220101_000001_create_user_table.rs
nicknamer/server/: .env  Cargo.toml  Makefile.toml  bacon.toml  compose.yml  railway.json
nicknamer/server/.mise/: config.toml
nicknamer/server/.mise/tasks/: run_local  test
nicknamer/server/migration/: Cargo.toml
nicknamer/server/migration/src/: lib.rs  m20250618_072946_rename_table_name.rs  m20250622_231317_add_index.rs  m20250706_102217_add_name_by_server.rs  m20250715_180325_update_unique_column.rs
nicknamer/server/src/: auth.rs  lib.rs  main.rs  name.rs  testing.rs
nicknamer/server/src/auth/: mod.rs
nicknamer/server/src/entities/: mod.rs  name.rs  prelude.rs  user.rs
nicknamer/server/src/name/: mod.rs  web.rs
nicknamer/server/src/web/: api.rs  middleware.rs  mod.rs
nicknamer/server/templates/: base.html  index.html  layout.html  login.html  login_error_message.html  login_failure.html  login_success.html  names.html  names_table.html
nicknamer/server/templates/login/: login_error_message.html  login_success.html
nicknamer/server/templates/names/: add_name_form.html  bulk_add_form.html  bulk_add_success.html  bulk_delete.html  bulk_delete_table.html  edit_name_form.html  error_message.html  name_row.html  names.html  names_stat.html  names_table.html
nicknamer/server/templates/partials/: footer.html  head.html
nicknamer/server/templates/welcome/: call_to_action.html
nicknamer/server/tests/: auth_endpoints_tests.rs  name_service_tests.rs  names_endpoints_tests.rs  user_controller_tests.rs  user_service_tests.rs  web_endpoints_tests.rs
nicknamer/server/tests/common/: mod.rs
nicknamer/server/tests/snapshots/: auth_endpoints_tests__api__v1__can_allow_requests_with_valid_bearer_token.snap  auth_endpoints_tests__api__v1__can_login_with_valid_credentials_via_json_api.snap  auth_endpoints_tests__api__v1__can_reject_invalid_credentials_via_json_api.snap  auth_endpoints_tests__api__v1__can_reject_requests_with_invalid_bearer_token.snap  auth_endpoints_tests__api__v1__can_reject_requests_without_authorization_header.snap  auth_endpoints_tests__can_display_login_page.snap  auth_endpoints_tests__can_display_login_page_with_homepage_button_when_logged_in.snap  auth_endpoints_tests__can_handle_template_error_with_internal_server_error.snap  auth_endpoints_tests__can_login_with_valid_credentials.snap  auth_endpoints_tests__can_reject_invalid_credentials.snap  auth_endpoints_tests__can_render_login_page_form_when_user_not_logged_in.snap  auth_endpoints_tests__can_render_login_page_with_homepage_button_when_user_logged_in.snap  auth_endpoints_tests__can_return_success_when_already_logged_in.snap  auth_endpoints_tests__json_api_tests__can_login_with_valid_credentials_via_json_api.snap  names_endpoints_tests__api__v1__api_v1_names_endpoint_handles_large_dataset.snap  names_endpoints_tests__api__v1__api_v1_names_endpoint_returns_correct_json_structure.snap  names_endpoints_tests__api__v1__can_filter_names_by_different_server_id.snap  names_endpoints_tests__api__v1__can_filter_names_by_server_id.snap  names_endpoints_tests__api__v1__can_get_empty_names_as_json_when_no_names_exist.snap  names_endpoints_tests__api__v1__can_get_names_as_json_when_names_exist.snap  names_endpoints_tests__api__v1__can_handle_empty_server_id_parameter.snap  names_endpoints_tests__api__v1__can_return_all_names_when_no_server_filter.snap  names_endpoints_tests__api__v1__can_return_empty_list_for_nonexistent_server.snap  names_endpoints_tests__bulk_delete_endpoint_returns_correct_content_type.snap  names_endpoints_tests__bulk_delete_endpoint_returns_correct_content_type.snap.new  names_endpoints_tests__can_bulk_delete_all_names.snap  names_endpoints_tests__can_bulk_delete_selected_names.snap  names_endpoints_tests__can_bulk_delete_selected_names.snap.new  (+51 more)
nicknamer/src/: main.rs  real_names.yml
nicknamer/src/nicknamer/: commands.rs  config.rs  file.rs  mod.rs  user.rs
nicknamer/src/nicknamer/commands/: clean.rs  (+3 more)
(+79 files in other folders)
