[workspace]
resolver = "3"
members = ["grrs", "nicknamer/*", "task-cli", "hot_dog", "guess_the_word_v2/core", "guess_the_word_v2/web/migration", "guess_the_word_v2/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

