[package]
name = "hot_dog"
version = "0.1.0"
authors = ["tacascer <trandangtrithanh2000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.32.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite"]
