[package]
name = "nicknamer-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
mockall = "0.13.1"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
testcontainers = "0.24.0"
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
tokio = "1.45.1"
uuid = { version = "1.17.0", features = ["v4"] }
