[package]
name = "nicknamer"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["console_appender"] }
poise = "0.6.1"
serde = "1.0.219"
serde_yml = "0.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
mockall = "0.13.1"
async-trait = "0.1.88"
config = "0.15.11"
toml = "0.8.23"
include_dir = "0.7.4"
axum = "0.8.4"
