[package]
name = "guess_the_word_v2"
version = "0.1.0"
authors = ["tacascer <trandangthanh2000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
guess_the_word_v2_core = { path = "../core", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}

[features]
default = []
# The feature that are only required for the web build target should be optional and only enabled in the web feature
web = ["dioxus/web"]
# The feature that are only required for the desktop build target should be optional and only enabled in the desktop feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile build target should be optional and only enabled in the mobile feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server build target should be optional and only enabled in the server feature
server = ["dioxus/server"]

