[package]
name = "mindreadr_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router", "fullstack"] }
mindreadr_core = { path = "../core", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
mindreadr_web_migration = { path = "./migration", optional = true }
sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"], optional = true }
tracing = "0.1.41"
tracing-futures = "0.2.5"
config = { version = "0.15.14", optional = true }
anyhow = "1.0.99"
thiserror = "2.0.16"
gloo-storage = "0.3"

[features]
default = ["web"]
# The feature that are only required for the web build target should be optional and only enabled in the web feature
web = ["dioxus/web"]
# The feature that are only required for the desktop build target should be optional and only enabled in the desktop feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile build target should be optional and only enabled in the mobile feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server build target should be optional and only enabled in the server feature
server = ["dioxus/server", "tokio", "axum", "mindreadr_web_migration", "sea-orm", "config"]
