[package]
name = "nicknamer-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.8"
config = "0.15.19"
include_dir = "0.7.4"
mockall = "0.14.0"
poise = "0.6.1"
serde = "1.0.228"
serde_yml = "0.0.12"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.22"
