[package]
name = "nicknamer_server"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
insta = { version = "1.45.0", features = ["yaml"] }
mockall = "0.14.0"
regex = "1.12"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }

[dependencies]
anyhow = "1.0.99"
askama = "0.14.0"
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["cookie"] }
chrono = "0.4.42"
config = "0.15.19"
jsonwebtoken = "9.3.1"
migration = { version = "0.1.0", path = "./migration" }
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.228"
serde_json = "1.0"
thiserror = "2.0.17"
time = "0.3.44"
tokio = "1.48.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.8", features = [
    "trace",
    "cors",
    "sensitive-headers",
] }
tracing = "0.1.43"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.22"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4"] }
serde_yaml = "0.9.34"
